fix(cell): resolve icon align (#1306)

--- a/style/mobile/components/cell/v2/_index.less
+++ b/style/mobile/components/cell/v2/_index.less
@@ -62,6 +62,10 @@
   &__right {
     display: flex;
     align-items: center;
+
+    .@{prefix}-icon {
+      display: block;
+    }
   }
 
   &__left {
